--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- About -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello there! I’m Emily Tran, a self-taught game developer and digital artist. I’m currently studying Computer Science at Cal Poly Pomona, with a focus on integrating machine learning and artificial intelligence into game development. I am deeply passionate about game development and I’m excited to combine my technical abilities with my creative skills to build immersive and engaging experiences. </p>
+        <p>Hello there! I’m Emily Tran, a self-taught game developer and digital artist. I’m currently studying Computer Science at Cal Poly Pomona, with a focus on integrating machine learning and artificial intelligence into game development. I am deeply passionate about game development and aim to combine my technical abilities with my creative skills to build immersive and engaging experiences. </p>
     </section>
 
     <!-- Projects -->
