--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- About -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello there! I’m Emily Tran, a self-taught game developer and digital artist. I’m currently studying Computer Science at Cal Poly Pomona, with a focus on integrating machine learning and artificial intelligence into game development. I am deeply passionate about game development and aim to combine my technical abilities with my creative skills to build immersive and engaging experiences. </p>
+        <p>Hello!! I'm Emily Tran, a computer science student at Cal Poly Pomona and a passionate self-taught game developer. I specialize in creating 2D games with narrative-driven adventure games in Unity, utilizing my art and animation to bring these games to life. I enjoy both team and solo projects. I love environments where everyone can socialize, collaborate, learn, and have fun together doing what we love. My independent projects allow me to explore new things and grow at my own pace. Although I have my areas of focus, I'm always interested in learning new things and meeting new people! Feel free to check out my projects below!  </p>
     </section>
 
     <!-- Projects -->
@@ -40,12 +40,22 @@
 
             <div class="project">
                 <div class="project-details">
-                    <h4>Fitch (In Progress)</h4>
+                    <h4>Booping Beep</h4>
                     <p>Fitch is a 2D Metroidvania-style story adventure game where you play as a witch navigating through diverse environments, battling enemies, and utilizing the help of a fox companion that grants special powers. </p>
-                    <p>This game is currently in early development as an independent passion project using Unity. Here’s the concept art for the main character, along with an idle animation. </p>
+                    <p>This game is currently in early development as an independent passion project using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peak of the main characters design and idle animation.</p>
+                    <p><a href="https://veiix.itch.io/booping-beep" target="_blank">Play here on Itch.io!</a></p>
                 </div>
-                <div class="rayne-image">
-                    <img src="Rayne.gif" alt="Rayne Animation">
+                <div class="sprites-image">
+                    <div class="top-row">
+                        <img src="assets/boopingbeep_concept art.png" alt="booping beep concept art">
+                        <img src="assets/boopingbeep_prototype.png" alt="booping beep first prototype">
+                        <img src="assets/boopingbeep_beepalone.gif" alt="beep alone">
+                    </div>
+                    <div class="bottom-column">
+                        <img src="assets/boopingbeep_beepshield.gif" alt="beep shield">
+                        <img src="assets/boopingbeep_beepspeed.gif" alt="beep speed">
+                        <img src="assets/boopingbeep_beepboth.gif" alt="beep both">
+                    </div>
                 </div>
             </div>
 
@@ -53,17 +63,17 @@
                 <div class="project-details">
                     <h4>Elementail (In Progress)</h4>
                     <p>Elementail is a rogue-lite elemental-based 2D action platformer game where you play as a cat navigating through various levels and battling enemies. As the player progresses, they unlock different elemental abilities that change their playstyle, helping them prepare for platforming challenges and intense boss fights of varying difficulties. </p>
-                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peek of the concept art for the main character, along with an idle animation that I’ve worked on. </p>
+                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peak of the main characters design and idle animation that I've worked on. </p>
                 </div>
                 <div class="sesame-image">
-                    <img src="Sesame.gif" alt="Sesame Animation">
+                    <img src="assets/Sesame.gif" alt="Sesame Animation">
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-details">
                     <h4>Sntruggled (In Progress)</h4>
-                    <p>Sntruggled is a VR first-person shooter (FPS) zombie survival game where you and your stuffed animal friends fight off endless waves of toys. Use a variety of toy gun weapons, each with unique features, to decimate your enemies in this immersive, action-packed VR experience. </p>
+                    <p>Sntruggled is a VR first-person shooter (FPS) zombie survival game where you and your stuffed animal friends fight off endless waves of toys. Use a variety of toy gun weapons, each with unique features, to decimate your enemies in this immersive VR experience. </p>
                     <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development, Unity’s free assets for 3D models and animations, and Blender for customization. Although there isn’t much to show yet, I am actively involved in the controller movement, enemy AI, and overall game design. </p>
                 </div>
             </div>
@@ -74,7 +84,7 @@
                     <p>Created pixel art character movement animations and implemented basic controls in Unity with a fox sprite that follows the player. </p>
                 </div>
                 <div class="Prototype-image">
-                    <img src="2D Prototype.gif" alt="Demo">
+                    <img src="assets/2D Prototype.gif" alt="Demo">
                 </div>
             </div>
 
@@ -84,7 +94,7 @@
                     <p>Built a 3D game environment and implemented player controls, shooting mechanics, and basic enemy AI. </p>
                 </div>
                 <div class="Prototype-image">
-                    <img src="3D Prototype.gif" alt="Demo">
+                    <img src="assets/3D Prototype.gif" alt="Demo">
                 </div>
             </div>
 
@@ -97,10 +107,10 @@
             <div class="project">
                 <div class="project-details">
                     <h4>Vee</h4>
-                    <p>An original pixel art character design and animation created in MediBang Paint, inspired by my personal aesthetic and personality. </p>
+                    <p>An original pixel art character design and animation, created in MediBang Paint, inspired by my personal aesthetic and personality. </p>
                 </div>
                 <div class="Portrait-image">
-                    <img src="Vee.gif" alt="Vee Animation">
+                    <img src="assets/Vee.gif" alt="Vee Animation">
                 </div>
             </div>
 
@@ -110,7 +120,7 @@
                     <p>An original pixel art character design and animation, created in MediBang Paint as a commissioned piece for my friend's original character. </p>
                 </div>
                 <div class="Portrait-image">
-                    <img src="Digi.gif" alt="Digi Animation">
+                    <img src="assets/Digi.gif" alt="Digi Animation">
                 </div>
             </div>
 
@@ -119,10 +129,10 @@
                     <h4>Original Characters </h4>
                 </div>
                 <div class="Still-image">
-                    <img src="Art1.png" alt="Art Piece 1">
-                    <img src="Art2.png" alt="Art Piece 2">
-                    <img src="Art3.png" alt="Art Piece 3">
-                    <img src="Art4.png" alt="Art Piece 4">
+                    <img src="assets/Art1.png" alt="Art Piece 1">
+                    <img src="assets/Art2.png" alt="Art Piece 2">
+                    <img src="assets/Art3.png" alt="Art Piece 3">
+                    <img src="assets/Art4.png" alt="Art Piece 4">
                 </div>
             </div>
 
@@ -132,7 +142,7 @@
                     <p>A traditional acrylic painting created from real-life objects, focusing on light, shadow, and texture. </p>
                 </div>
                 <div class="Still-image">
-                    <img src="Art5.jpg" alt="Art Piece 5">
+                    <img src="assets/Art5.jpg" alt="Art Piece 5">
                 </div>
             </div>
 
@@ -142,7 +152,7 @@
                     <p>A traditional landscape painting of "The Crystarium" from the video game FINAL FANTASY XIV, created with acrylic paint. </p>
                 </div>
                 <div class="Still-image">
-                    <img src="Art6.jpg" alt="Art Piece 6">
+                    <img src="assets/Art6.jpg" alt="Art Piece 6">
                 </div>
             </div>
 
