added two games

--- a/index.html
+++ b/index.html
@@ -61,12 +61,19 @@
 
             <div class="project">
                 <div class="project-details">
-                    <h4>Elementail (In Progress)</h4>
-                    <p>Elementail is a rogue-lite elemental-based 2D action platformer game where you play as a cat navigating through various levels and battling enemies. As the player progresses, they unlock different elemental abilities that change their playstyle, helping them prepare for platforming challenges and intense boss fights of varying difficulties. </p>
-                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peak of the main characters design and idle animation that I've worked on. </p>
+                    <h4>Sntruggled</h4>
+                    <p>Elementail is a rogue-lite elemental-based 2D action platformer game where you play as a cat navigating through various levels and battling enemies. As the player progresses, they unlock different elemental abilities that change their playstyle, helping them prepare for platforming challenges and intense boss fights of varying difficulties.</p>
+                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peek of the main character’s design and idle animation that I've worked on.</p>
                 </div>
-                <div class="sesame-image">
-                    <img src="assets/Sesame.gif" alt="Sesame Animation">
+
+                <div class="video-container">
+                    <iframe 
+                    src="https://www.youtube.com/embed/2cnyOMvNU2k" 
+                    title="Sntruggled Gameplay Video"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                    </iframe>
                 </div>
             </div>
 
