--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>Hello!! I'm Emily Tran, a computer science student at Cal Poly Pomona and a passionate self-taught game developer. I specialize in creating 2D games with narrative-driven adventure games in Unity, utilizing my art and animation to bring these games to life. I enjoy both team and solo projects. I love environments where everyone can socialize, collaborate, learn, and have fun together doing what we love. My independent projects allow me to explore new things and grow at my own pace. Although I have my areas of focus, I'm always interested in learning new things and meeting new people! Feel free to check out my projects below!  </p>
+        <p><a href="assets/Emily Tran - Resume.pdf" target="_blank">View My Resume Here!</a></p>
     </section>
 
     <!-- Projects -->
@@ -40,10 +41,11 @@
 
             <div class="project">
                 <div class="project-details">
-                    <h4>Booping Beep</h4>
-                    <p>Fitch is a 2D Metroidvania-style story adventure game where you play as a witch navigating through diverse environments, battling enemies, and utilizing the help of a fox companion that grants special powers. </p>
-                    <p>This game is currently in early development as an independent passion project using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peak of the main characters design and idle animation.</p>
-                    <p><a href="https://veiix.itch.io/booping-beep" target="_blank">Play here on Itch.io!</a></p>
+                    <h4>Booping Beep – 2D Endless Runner</h4>
+                    <p>Created in a 75-hour time limit for a game jam, Booping Beep is a fast-paced 2D endless runner, heavily inspired by Jetpack Joyride. Players control a bee named Beep, where they dodge through obstacles and collect power-ups.  </p>
+                    <p>I worked in a small team of four to help bring this game to life. My main contributions were creating the bee sprites and animations, along with the power-ups in Aseprite, and integrating these animations smoothly into Unity. I was in charge of overseeing all the art done and providing direction and assistance for the team. Additionally, I helped with debugging projectiles and power-up interactivity. </p>
+                    <p>We were able to showcase Booping Beep to an open audience, where players tested the game and provided encouraging feedback that helped us refine our ideas further and keep developing! Images/Gifs of my work are available on this page.</p>
+                    <p><a href="https://veiix.itch.io/booping-beep" target="_blank">Play here!!</a></p>
                 </div>
                 <div class="sprites-image">
                     <div class="top-row">
@@ -61,9 +63,10 @@
 
             <div class="project">
                 <div class="project-details">
-                    <h4>Sntruggled</h4>
-                    <p>Elementail is a rogue-lite elemental-based 2D action platformer game where you play as a cat navigating through various levels and battling enemies. As the player progresses, they unlock different elemental abilities that change their playstyle, helping them prepare for platforming challenges and intense boss fights of varying difficulties.</p>
-                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development and Aseprite for creating pixel art and animations. Here’s a sneak peek of the main character’s design and idle animation that I've worked on.</p>
+                    <h4>Sntruggled – VR FPS Zombie Survival</h4>
+                    <p>Sntruggled, a play of words on snuggled and struggled, is a VR FPS zombie survival game, inspired by Call Of Duty: Zombies, developed for a VR Lab at Cal Poly Pomona. Over the couse of four months, our team of four created an immersive VR experience where players explore an environment while fending off quirky, cat-like enemies.</p>
+                    <p>My main contributions included implementing player movement with the XR Toolkit, integrating enemy animations, implementing enemy AI, and adding 3D spatial audio for immersion within Unity. We collaborated weekly to review progress and to receive guidance from our mentors. Please see the video on this page for a demo of Sntruggled!</p>
+                    <p>We showcased Sntruggled to an open audience, where players tested the game and provided valuable feedback that improved our final version. The presentation was a great opportunity to engage with the audience and share our development process. A demo video of Sntruggled is available on this page.</p>
                 </div>
 
                 <div class="video-container">
@@ -79,31 +82,74 @@
 
             <div class="project">
                 <div class="project-details">
-                    <h4>Sntruggled (In Progress)</h4>
-                    <p>Sntruggled is a VR first-person shooter (FPS) zombie survival game where you and your stuffed animal friends fight off endless waves of toys. Use a variety of toy gun weapons, each with unique features, to decimate your enemies in this immersive VR experience. </p>
-                    <p>The game is currently in early development as part of a collaborative project with a team of friends. We’re using Unity for game development, Unity’s free assets for 3D models and animations, and Blender for customization. Although there isn’t much to show yet, I am actively involved in the controller movement, enemy AI, and overall game design. </p>
+                    <h4>The Adventure of Hammy – 2D Narrative Adventure (in progress)</h4>
+                    <p>The Adventure of Hammy is an independently developed 2D narrative adventure exploring long-distance relationships. Players navigate an action-filled environment that represents long-distance relationships through narrative and environmental storytelling.</p>
+                    <p>I have implemented core gameplay mechanics in Unity C#, including player movement, directional attacks, and health/stamina/healing systems. I also created and animated sprites for these mechanics, ensuring clear visual feedback for the player.</p>
+                    <p>The project is a work in progress, with additional mechanics and a branching dialogue system currently in development. A preview video of the project is available on this page.</p>
+                </div>
+                <div class="mp4-container">
+                <video controls>
+                    <source src="assets/theadventureofhammydemo.mp4" type="video/mp4">
+                </video>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-details">
-                    <h4>2D Side-scroller Prototype</h4>
-                    <p>Created pixel art character movement animations and implemented basic controls in Unity with a fox sprite that follows the player. </p>
+                    <h4>Fitch – 2D Metroidvania (in progress)</h4>
+                    <p>Fitch is a 2D Metroidvania-style story adventure game. Players control a witch navigating diverse environments, battling enemies, and using a fox companion that grants special powers.</p>
+                    <p>This project is in early development as an independent game. I created mini-prototypes to experiment with player movement and art style. I finalized the art style and fully rendered the main antagonist with basic animations. Prototype videos and character sprites can be viewed on this page. </p>
+                    <p>I am currently developing the narrative and additional characters for the game</p>
                 </div>
-                <div class="Prototype-image">
-                    <img src="assets/2D Prototype.gif" alt="Demo">
+                <div class="sprites-image">
+                    <img src="assets/Rayne.gif" alt="Official Fitch">
+                </div>
+                <div class="mp4-container stacked-videos">
+                    <video controls>
+                    <source src="assets/fitchprototype1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                    </video>
+
+                    <video controls>
+                    <source src="assets/fitchprototype2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
 
             <div class="project">
                 <div class="project-details">
-                    <h4>2D Side-scroller Prototype</h4>
-                    <p>Built a 3D game environment and implemented player controls, shooting mechanics, and basic enemy AI. </p>
+                    <h4>Elementail – 2D Rouge-lite Action Platformer (on hiatus)</h4>
+                    <p>Elementail is a rogue-lite, elemental-based 2D action platformer where players control a cat named Sesame, navigating levels and battling enemies. As players progress, they unlock elemental abilities that change their playstyle, preparing them for platforming challenges and boss fights.</p>
+                    <p>The project is currently on hiatus. My contributions include designing and animating the main character sprite in Aseprite and integrating it into Unity. I also serve as art lead, providing visual direction and support for the team. The sprite work I created is showcased on this page</p>
+                    <p>Future work includes reworking mechanics, cleaning up code, and developing enemy sprites.</p>
                 </div>
-                <div class="Prototype-image">
-                    <img src="assets/3D Prototype.gif" alt="Demo">
+                <div class="sprites-image">
+                    <div class="top-row">
+                    <img src="assets/sesameidle.gif" alt="Sesame Idle">
+                    <img src="assets/sesamerun.gif" alt="Sesame Run">
+                    </div>
+                    <div class="bottom-column">
+                    <img src="assets/sesameparry.gif" alt="Sesame Parry">
+                    <img src="assets/sesamedie.gif" alt="Sesake Die">
+                    <img src="assets/sesameattack.gif" alt="Sesame Attack">
+                    </div>
                 </div>
             </div>
+
+            <div class="project">
+                <div class="project-details">
+                    <h4>FPS Prototype</h4>
+                    <p>Built a 3D game environment and implemented player controls, shooting mechanics, and basic enemy AI using Unity. </p>
+                    <p>See the video on this page to see!</p>
+                </div>
+                <div class="mp4-container">
+                <video controls>
+                    <source src="assets/fpsprototype.mp4" type="video/mp4">
+                </video>
+                </div>
+            </div>
+
 
         </div>
 
