--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h4>Sntruggled – VR FPS Zombie Survival</h4>
                     <p>Sntruggled, a play of words on snuggled and struggled, is a VR FPS zombie survival game, inspired by Call Of Duty: Zombies, developed for a VR Lab at Cal Poly Pomona. Over the couse of four months, our team of four created an immersive VR experience where players explore an environment while fending off quirky, cat-like enemies.</p>
                     <p>My main contributions included implementing player movement with the XR Toolkit, integrating enemy animations, implementing enemy AI, and adding 3D spatial audio for immersion within Unity. We collaborated weekly to review progress and to receive guidance from our mentors. Please see the video on this page for a demo of Sntruggled!</p>
-                    <p>We showcased Sntruggled to an open audience, where players tested the game and provided valuable feedback that improved our final version. The presentation was a great opportunity to engage with the audience and share our development process. A demo video of Sntruggled is available on this page.</p>
+                    <p>We showcased Sntruggled to an open audience, where players tested the game and provided valuable feedback that improved our final version. The presentation was a great opportunity to engage with the audience and share our development process. A demo video of Sntruggled is available on this page. <a href="https://www.youtube.com/embed/2cnyOMvNU2k" target="_blank">Also linked here.</a></p>
                 </div>
 
                 <div class="video-container">
