--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     <div class="top-row">
                         <img src="assets/boopingbeep_concept art.png" alt="booping beep concept art">
                         <img src="assets/boopingbeep_prototype.png" alt="booping beep first prototype">
-                        <img class="lazy" data-src="assets/boopingbeep_beepalone.gif" alt="beep alone">
+                        <img src="assets/boopingbeep_beepalone.png" data-src="assets/boopingbeep_beepalone.gif" class="lazy" alt="beep alone">
                     </div>
                     <div class="bottom-column">
-                        <img class="lazy" data-src="assets/boopingbeep_beepshield.gif" alt="beep shield">
-                        <img class="lazy" data-src="assets/boopingbeep_beepspeed.gif" alt="beep speed">
-                        <img class="lazy" data-src="assets/boopingbeep_beepboth.gif" alt="beep both">
+                        <img src="assets/boopingbeep_beepshield.png" data-src="assets/boopingbeep_beepshield.gif" class="lazy" alt="beep shield">
+                        <img src="assets/boopingbeep_beepspeed.png" data-src="assets/boopingbeep_beepspeed.gif" class="lazy" alt="beep speed">
+                        <img src="assets/boopingbeep_beepboth.png" data-src="assets/boopingbeep_beepboth.gif" class="lazy" alt="beep both">
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <p>I am currently developing the narrative and additional characters for the game.</p>
                 </div>
                 <div class="sprites-image">
-                    <img class="lazy" data-src="assets/Rayne.gif" alt="Official Fitch">
+                    <img src="assets/Rayne.png" data-src="assets/Rayne.gif" img class="lazy" alt="Official Fitch">
                 </div>
                 <div class="mp4-container stacked-videos">
                     <video controls>
@@ -126,13 +126,13 @@
                 </div>
                 <div class="sprites-image">
                     <div class="top-row">
-                    <img class="lazy" data-src="assets/sesameidle.gif" alt="Sesame Idle">
-                    <img class="lazy" data-src="assets/sesamerun.gif" alt="Sesame Run">
-                    <img class="lazy" data-src="assets/sesamedie.gif" alt="Sesake Die">
+                    <img src="assets/sesameidle.png" data-src="assets/sesameidle.gif" img class="lazy" alt="Sesame Idle">
+                    <img src="assets/sesamerun.png" data-src="assets/sesamerun.gif" img class="lazy" alt="Sesame Run">
+                    <img src="assets/sesamedie.png" data-src="assets/sesamedie.gif" img class="lazy" alt="Sesake Die">
                     </div>
                     <div class="bottom-column">
-                    <img class="lazy" data-src="assets/sesameparry.gif" alt="Sesame Parry">
-                    <img class="lazy" data-src="assets/sesameattack.gif" alt="Sesame Attack">
+                    <img src="assets/sesameparry.png" data-src="assets/sesameparry.gif" img class="lazy" alt="Sesame Parry">
+                    <img src="assets/sesameattack.png" data-src="assets/sesameattack.gif" img class="lazy" alt="Sesame Attack">
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <p>An original pixel art character design and animation, created in MediBang Paint, inspired by my personal aesthetic and personality. </p>
                 </div>
                 <div class="Portrait-image">
-                    <img class="lazy" data-src="assets/Vee.gif" alt="Vee Animation">
+                    <img src="assets/Vee.png" data-src="assets/Vee.gif" img class="lazy" alt="Vee Animation">
                 </div>
             </div>
 
@@ -173,7 +173,7 @@
                     <p>An original pixel art character design and animation, created in MediBang Paint as a commissioned piece for my friend's original character. </p>
                 </div>
                 <div class="Portrait-image">
-                    <img class="lazy" data-src="assets/Digi.gif" alt="Digi Animation">
+                    <img src="assets/Digi.png" data-src="assets/Digi.gif" img class="lazy" alt="Digi Animation">
                 </div>
             </div>
 
