added 2 art pieces

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
                 <div class="Still-image">
                     <img src="assets/Art1.png" alt="Art Piece 1">
                     <img src="assets/Art2.png" alt="Art Piece 2">
+                    <img src="assets/Art7.png" alt="Art Piece 7">
+                    <img src="assets/Art8.png" alt="Art Piece 8">
                     <img src="assets/Art3.png" alt="Art Piece 3">
                     <img src="assets/Art4.png" alt="Art Piece 4">
                 </div>
