--- a/Home/index.html
+++ b/Home/index.html
@@ -19,7 +19,7 @@
                 <a href="assets/Emily Tran - Resume.pdf" target="_blank" rel="noopener noreferrer">[ Resume ]</a>|<a href="https://linkedin.com/in/emily-tran-25062028b" target="_blank" rel="noopener noreferrer">[ LinkedIn ]</a>|<a href="https://github.com/ectran" target="_blank" rel="noopener noreferrer">[ GitHub ]</a>|<a href="https://veiix.itch.io/" target="_blank" rel="noopener noreferrer">[ Itch.io ]</a>
             </div>
             <div class="nav-links">
-                <a href="home.html" class="active">HOME</a>
+                <a href="index.html" class="active">HOME</a>
                 <a href="../Projects/projects.html">PROJECTS</a>
                 <a href="../Artwork/artwork.html">ARTWORK</a>
                 <a href="../Contact/contact.html">CONTACT</a>
