--- a/Home/meet_my_oc/meet_my_oc.html
+++ b/Home/meet_my_oc/meet_my_oc.html
@@ -28,7 +28,7 @@
         </div>
 
         <nav class="header-center">
-          <a href="../home.html">HOME</a>
+          <a href="../index.html">HOME</a>
           <a href="../../Projects/projects.html">PROJECTS</a>
           <a href="../../Artwork/artwork.html">ARTWORK</a>
           <a href="../../Contact/contact.html">CONTACT</a>
