--- a/Projects/booping_beep/boopingBeep.html
+++ b/Projects/booping_beep/boopingBeep.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <nav class="header-center">
-                    <a href="../../Home/home.html">HOME</a>
+                    <a href="../../Home/index.html">HOME</a>
                     <a href="../projects.html">PROJECTS</a>
                     <a href="../../Artwork/artwork.html">ARTWORK</a>
                     <a href="../../Contact/contact.html">CONTACT</a>
@@ -42,7 +42,7 @@
         <section class="projects-hero">
             <h1>BOOPING BEEP</h1>
         </section>
-        
+
         <img src="../assets/boopingBeep.png" class="project-logo">
 
         <!-- Game Description + Credits -->
