--- a/Artwork/sesame/sesame.html
+++ b/Artwork/sesame/sesame.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <nav class="header-center">
-                    <a href="../../Home/home.html">HOME</a>
+                    <a href="../../Home/index.html">HOME</a>
                     <a href="../../Projects/projects.html">PROJECTS</a>
                     <a href="../../Artwork/artwork.html">ARTWORK</a>
                     <a href="../../Contact/contact.html">CONTACT</a>
