made GitHub Pages friendly

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <h1>EMILY TRAN'S PORTFOLIO</h1>
             <h2>WELCOME!</h2>
             <div class="socials">
-                <a href="assets/Emily Tran - Resume.pdf" target="_blank" rel="noopener noreferrer">[ Resume ]</a>|<a href="https://linkedin.com/in/emily-tran-25062028b" target="_blank" rel="noopener noreferrer">[ LinkedIn ]</a>|<a href="https://github.com/ectran" target="_blank" rel="noopener noreferrer">[ GitHub ]</a>|<a href="https://veiix.itch.io/" target="_blank" rel="noopener noreferrer">[ Itch.io ]</a>
+                <a href="Home/assets/Emily Tran - Resume.pdf" target="_blank" rel="noopener noreferrer">[ Resume ]</a>|<a href="https://linkedin.com/in/emily-tran-25062028b" target="_blank" rel="noopener noreferrer">[ LinkedIn ]</a>|<a href="https://github.com/ectran" target="_blank" rel="noopener noreferrer">[ GitHub ]</a>|<a href="https://veiix.itch.io/" target="_blank" rel="noopener noreferrer">[ Itch.io ]</a>
             </div>
             <div class="nav-links">
                 <a href="index.html" class="active">HOME</a>
-                <a href="../Projects/projects.html">PROJECTS</a>
-                <a href="../Artwork/artwork.html">ARTWORK</a>
-                <a href="../Contact/contact.html">CONTACT</a>
+                <a href="Projects/projects.html">PROJECTS</a>
+                <a href="Artwork/artwork.html">ARTWORK</a>
+                <a href="Contact/contact.html">CONTACT</a>
             </div>
         </section>
 
@@ -35,7 +35,7 @@
                     <p>This site is where I keep my personal projects, artworks, and contact info. Consider this site in “early access”—it’ll keep getting patches, updates, and new content, just like me. :)</p>
                 </div>
                 <div id="about-profile">
-                    <img src="assets/veeProfile.png" alt="Emily Tran Profile" 
+                    <img src="Home/assets/veeProfile.png" alt="Emily Tran Profile" 
                         oncontextmenu="return false;" draggable="false">
                 </div>
             </div>
@@ -46,12 +46,12 @@
             <h2>MEET MY OC</h2>
             <div class="oc-content">
                 <div class="oc-image">
-                    <img src="assets/veeProfileFull.png" alt="Full OC Artwork" 
+                    <img src="Home/assets/veeProfileFull.png" alt="Full OC Artwork" 
                         oncontextmenu="return false;" draggable="false">
                 </div>
                 <div class="oc-description">
                     <p>Meet Vee, my personal original character (OC) and digital persona! While her appearance can be dark and scary, her personality is quite the opposite. Vee is known as the quiet and mysterious girl, but those close know her to be incredibly innocent, warm, and sweet… also secretly prone to obsessive fixations. Her overall design reflects elements of my own personality, allowing me to share a piece of myself through my art.</p>
-                    <a href="meet_my_oc/meet_my_oc.html" class="read-more">[ See Her Development! ]</a>
+                    <a href="Home/meet_my_oc/meet_my_oc.html" class="read-more">[ See Her Development! ]</a>
                 </div>
             </div>
         </section>
