--- a/Artwork/sesame/sesame.html
+++ b/Artwork/sesame/sesame.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Tran - Portfolio/Artwork/Sesame</title>
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-    <link rel="stylesheet" href="../../Home/home.css">
+    <link rel="stylesheet" href="../../home.css">
     <link rel="stylesheet" href="../../Projects/projects.css"> 
     <link rel="stylesheet" href="../../Projects/booping_beep/boopingBeep.css">
 </head>
@@ -30,9 +30,9 @@
                 </div>
 
                 <nav class="header-center">
-                    <a href="../../Home/index.html">HOME</a>
+                    <a href="../../index.html">HOME</a>
                     <a href="../../Projects/projects.html">PROJECTS</a>
-                    <a href="../../Artwork/artwork.html">ARTWORK</a>
+                    <a href="../artwork.html">ARTWORK</a>
                     <a href="../../Contact/contact.html">CONTACT</a>
                 </nav>
             </div>
