--- a/Home/meet_my_oc/meet_my_oc.html
+++ b/Home/meet_my_oc/meet_my_oc.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emily Tran - Vee</title>
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-  <link rel="stylesheet" href="../home.css">
+  <link rel="stylesheet" href="../../home.css">
   <link rel="stylesheet" href="../../Projects/projects.css"> 
   <link rel="stylesheet" href="meet_my_oc.css">
 </head>
@@ -28,7 +28,7 @@
         </div>
 
         <nav class="header-center">
-          <a href="../index.html">HOME</a>
+          <a href="../../index.html">HOME</a>
           <a href="../../Projects/projects.html">PROJECTS</a>
           <a href="../../Artwork/artwork.html">ARTWORK</a>
           <a href="../../Contact/contact.html">CONTACT</a>
