--- a/Projects/booping_beep/boopingBeep.html
+++ b/Projects/booping_beep/boopingBeep.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Tran - Portfolio/Projects/BoopingBeep</title>
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-    <link rel="stylesheet" href="../../Home/home.css">
-    <link rel="stylesheet" href="../projects.css"> 
+    <link rel="stylesheet" href="../../home.css">
+    <link rel="stylesheet" href="../../Projects/projects.css"> 
     <link rel="stylesheet" href="boopingBeep.css">
 </head>
 
@@ -30,8 +30,8 @@
                 </div>
 
                 <nav class="header-center">
-                    <a href="../../Home/index.html">HOME</a>
-                    <a href="../projects.html">PROJECTS</a>
+                    <a href="../../index.html">HOME</a>
+                    <a href="../../Projects/projects.html">PROJECTS</a>
                     <a href="../../Artwork/artwork.html">ARTWORK</a>
                     <a href="../../Contact/contact.html">CONTACT</a>
                 </nav>
