adjustments for mobile view
- changed ordering
- edited nav
- fixed FITCH page

--- a/Projects/booping_beep/boopingBeep.html
+++ b/Projects/booping_beep/boopingBeep.html
@@ -45,30 +45,18 @@
 
         <img src="../assets/boopingBeep.png" class="project-logo">
 
-        <!-- Game Description + Credits -->
+        <!-- Game Description -->
         <section class="project-details">
-
             <div class="project-description">
                 <p>Booping Beep is a 2D endless runner created for a 2025 Spring Game Jam hosted by SPIN_GameJam / GDC Northridge / VGDA. Players control a bee named Beep—dodging through endless obstacles and collecting power-ups along the way. Booping Beep was developed by a team of four within a 75-hour time limit, all participating in their first game jam. Booping Beep is also heavily inspired by the mobile game, Jetpack Joyride.</p>
                 <a href="https://veiix.itch.io/booping-beep" class="read-more" target="_blank" rel="noopener noreferrer">[ Play on itch.io! ]</a>
-
-            </div>
-
-            <div class="project-credits">
-                <h2>Credits</h2>
-                <ul>
-                    <li>Art, Animation, Design & QA – Emily Tran</li>
-                    <li>Art & QA – Nathan Lam</li>
-                    <li>UI, Music & Title Screen – Angela Santos</li>
-                    <li>Code & Game Mechanics – William Licup</li>
-                </ul>
             </div>
         </section>
 
         <!-- My Contributions -->
         <section class="contributions">
-            <h2>My Contributions</h2>
-                <p>Below are the sprites and animations I designed and implemented for this project.</p>
+            <h2>MY CONTRIBUTIONS</h2>
+            <p>Below are the sprites and animations I designed and implemented for this project.</p>
         </section>
 
         <div class="screenshots-grid">
@@ -79,11 +67,21 @@
             <img src="assets/beepShield.gif" alt="Screenshot 5">
             <img src="assets/beepBoth.gif" alt="Screenshot 6">
         </div>
+
+        <!-- Credits (moved here) -->
+        <section class="project-credits">
+            <h2>CREDITS</h2>
+            <ul>
+                <li>Art, Animation, Design & QA – Emily Tran</li>
+                <li>Art & QA – Nathan Lam</li>
+                <li>UI, Music & Title Screen – Angela Santos</li>
+                <li>Code & Game Mechanics – William Licup</li>
+            </ul>
         </section>
 
         <!-- Software -->
         <section class="software">
-            <h2>Software</h2>
+            <h2>SOFTWARE</h2>
                 <p>Unity, Aseprite & FL Studio</p>
         </section>
 
