--- a/Projects/fitch/fitch.html
+++ b/Projects/fitch/fitch.html
@@ -50,8 +50,7 @@
         <section class="project-details">
 
             <div class="project-description">
-                <p>The Adventure of Mammy is a 2D narrative adventure game being developed independently. Players navigate through an action-filled enviroment that represents the hardships of long-distannce relationships through narrative and environmental storytelling. </p>
-                <a href="https://github.com/ectran/TheAdventureOfMammy" class="read-more" target="_blank" rel="noopener noreferrer">[ View my code here! ]</a>
+                <p>Fitch is a 2D Metroidvania game being developed independently. Players navigate through diverse environments exploring the rumors and origins of it all while accompanied by a fox companion that grants special powers. </p>
             </div>
 
             <div class="project-credits">
@@ -74,7 +73,7 @@
 
         <!-- Software -->
         <section class="software">
-            <h2>Software</h2>
+            <h2>SOFTWARE</h2>
                 <p>Unity, Aseprite, FL Studio</p>
         </section>
 
