--- a/Projects/sntruggled/sntruggled.html
+++ b/Projects/sntruggled/sntruggled.html
@@ -52,14 +52,14 @@
             <div class="project-description">
                 <p>Sntruggled (a play on the words snuggled and struggled) is a VR FPS zombie survival game created for Cal Poly Pomona’s research VR Lab. Players step into an immersive warehouse where they explore for chests, survive waves, and shoot down any cute-looking but deadly cat-like enemies. Sntruggled was developed by a team of four in the course of four months. During the development of Sntruggled, we were able to showcase the game to an open audience, where players tested the game and provided feedback that improved our final version. Sntruggled is a game inspired from Call Of Duty: Zombies.</p>
                 
-                <h2>Gameplay Video:</h2>
+                <h2>GAMEPLAY VIDEO</h2>
                     <div class="video-container">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/2cnyOMvNU2k?si=qAf7nYMCHJfREFyD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
             </div>
 
             <div class="project-credits">
-                <h2>Credits</h2>
+                <h2>CREDITS</h2>
                 <ul>
                     <li>Code, Player Movement & Enemy AI – Emily Tran</li>
                     <li>Code, Level Design & Wave Spawning – Nathan Lam</li>
@@ -72,7 +72,7 @@
 
         <!-- Software -->
         <section class="software">
-            <h2>Software</h2>
+            <h2>SOFTWARE</h2>
                 <p>Unity</p>
         </section>
 
