--- a/Projects/the_adventure_of_mammy/theAdventureOfMammy.html
+++ b/Projects/the_adventure_of_mammy/theAdventureOfMammy.html
@@ -78,7 +78,7 @@
 
         <!-- Software -->
         <section class="software">
-            <h2>Software</h2>
+            <h2>SOFTWARE</h2>
                 <p>Unity, Aseprite & FL Studio</p>
         </section>
 
