adjustments for mobile again

--- a/Artwork/sesame/sesame.html
+++ b/Artwork/sesame/sesame.html
@@ -40,7 +40,7 @@
 
         <!-- Projects Hero -->
         <section class="projects-hero">
-            <h1>Sesame</h1>
+            <h1>SESAME</h1>
         </section>
 
 
