fixed mobile ordering of Beeping Boop page

--- a/Projects/booping_beep/boopingBeep.html
+++ b/Projects/booping_beep/boopingBeep.html
@@ -51,32 +51,31 @@
                 <p>Booping Beep is a 2D endless runner created for a 2025 Spring Game Jam hosted by SPIN_GameJam / GDC Northridge / VGDA. Players control a bee named Beep—dodging through endless obstacles and collecting power-ups along the way. Booping Beep was developed by a team of four within a 75-hour time limit, all participating in their first game jam. Booping Beep is also heavily inspired by the mobile game, Jetpack Joyride.</p>
                 <a href="https://veiix.itch.io/booping-beep" class="read-more" target="_blank" rel="noopener noreferrer">[ Play on itch.io! ]</a>
             </div>
-        </section>
 
-        <!-- My Contributions -->
-        <section class="contributions">
-            <h2>MY CONTRIBUTIONS</h2>
-            <p>Below are the sprites and animations I designed and implemented for this project.</p>
-        </section>
+            <div class="project-credits">
+                <h2>CREDITS</h2>
+                <ul>
+                    <li>Art, Animation, Design & QA – Emily Tran</li>
+                    <li>Art & QA – Nathan Lam</li>
+                    <li>UI, Music & Title Screen – Angela Santos</li>
+                    <li>Code & Game Mechanics – William Licup</li>
+                </ul>
+            </div>
+            
+            <!-- My Contributions -->
+            <section class="contributions">
+                <h2>MY CONTRIBUTIONS</h2>
+                <p>Below are the sprites and animations I designed and implemented for this project.</p>
+            </section>
 
-        <div class="screenshots-grid">
-            <img src="assets/beepSheet.png" alt="Screenshot 1">
-            <img src="assets/beepChonk.png" alt="Screenshot 2">
-            <img src="assets/beepHonk.gif" alt="Screenshot 3">
-            <img src="assets/beepSpeed.gif" alt="Screenshot 4">
-            <img src="assets/beepShield.gif" alt="Screenshot 5">
-            <img src="assets/beepBoth.gif" alt="Screenshot 6">
-        </div>
-
-        <!-- Credits (moved here) -->
-        <section class="project-credits">
-            <h2>CREDITS</h2>
-            <ul>
-                <li>Art, Animation, Design & QA – Emily Tran</li>
-                <li>Art & QA – Nathan Lam</li>
-                <li>UI, Music & Title Screen – Angela Santos</li>
-                <li>Code & Game Mechanics – William Licup</li>
-            </ul>
+            <div class="screenshots-grid">
+                <img src="assets/beepSheet.png" alt="Screenshot 1">
+                <img src="assets/beepChonk.png" alt="Screenshot 2">
+                <img src="assets/beepHonk.gif" alt="Screenshot 3">
+                <img src="assets/beepSpeed.gif" alt="Screenshot 4">
+                <img src="assets/beepShield.gif" alt="Screenshot 5">
+                <img src="assets/beepBoth.gif" alt="Screenshot 6">
+            </div>
         </section>
 
         <!-- Software -->
